src/test/ui/issues/issue-14091-2.stderr
error[E0600]: cannot apply unary operator `!` to type `BytePos`
  --> $DIR/issue-14091-2.rs:15:5
   |
LL |     assert!(x, x);
   |     ^^^^^^^^^^^^^^ cannot apply unary operator `!`
   |
   = note: an implementation of `std::ops::Not` might be missing for `BytePos`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0600`.
